--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -21,5 +21,7 @@ jobs:
         uses: actions/setup-dotnet@v1
       - name: Restore
         run: dotnet restore
-      - name: Publish to Codecov
-        uses: codecov/codecov-action@v1
+      - name: Build
+        run: dotnet build --no-restore -c Release
+      - name: Tests
+        run: dotnet test --no-build -c Release
