--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,8 +23,10 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build --no-restore -c Release
+      - name: Tests
+        run: dotnet test --no-build -c Release
       - name: Pack artifacts
-        run: dotnet pack src/* -c Release --no-build --version-suffix dev-$(date +%s) -o artifacts/
+        run: dotnet pack src/* --no-build -c Release --version-suffix dev-$(date +%s) -o artifacts/
       - name: Publish artifacts
         uses: actions/upload-artifact@v2
         with:
