--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - name: 🚚 Checkout
         uses: actions/checkout@@v2
-      - name: 📁 Synchonizaion
-        uses: BetaHuhn/repo-file-sync-action@v1
+      - name: 📁 Synchonization
+        uses: BetaHuhn/repo-file-sync-action@latest
         with:
           GH_PAT: ${{ secrets.GH_DEPLOY_KEY }}
           ASSIGNEES: phnx47
