feat: try optimize

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,20 +1,11 @@
 group:
   - files:
-      - source: .github/workflows/
-        dest: .github/workflows/
-        exclude: sync-files.yml
-    repos: |
-      prom-client-net/prom-client
-      prom-client-net/prom-client-dependencyinjection
-      prom-client-net/prom-client-healthchecks
-      prom-client-net/prom-client-httprequestdurations
-      prom-client-net/prom-client-aspnetcore
-      prom-client-net/prom-client-metricpusher
-      prom-client-net/prom-client-metricserver
-  - files:
       - source: .github/
         dest: .github/
-        exclude: sync.yml
+        deleteOrphaned: true
+        exclude: |
+           sync-files.yml
+           sync.yml
     repos: |
       prom-client-net/prom-client
       prom-client-net/prom-client-dependencyinjection
