--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: 🚚 Checkout
         uses: actions/checkout@v2
-      - name: 📁 Synchonization
+      - name: 📁 Synchronization
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
           GH_PAT: ${{ secrets.GH_DEPLOY_KEY }}
