--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   sync-files:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: 🚚 Checkout
         uses: actions/checkout@v3
       - name: 📁 Synchronization
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
-          GH_PAT: ${{ secrets.GH_DEPLOY_KEY }}
+          GH_PAT: ${{ secrets.GH_PKG_PAT }}
           ASSIGNEES: phnx47
           SKIP_PR: true
           GIT_USERNAME: github-actions[bot]
