--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -15,7 +15,7 @@ jobs:
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
           GH_PAT: ${{ secrets.GH_PKG_PAT }}
-          ASSIGNEES: phnx47
+          COMMIT_PREFIX: "chore:"
           SKIP_PR: true
           GIT_USERNAME: github-actions[bot]
           GIT_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
