--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -14,7 +14,7 @@ jobs:
       - name: 📁 Synchronization
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
-          GH_PAT: ${{ secrets.GH_PKG_PAT }}
+          GH_PAT: ${{ secrets.GH_FULL_PAT }}
           COMMIT_PREFIX: "chore:"
           SKIP_PR: true
           GIT_USERNAME: github-actions[bot]
