ci: downgrade repo-file-sync-action

--- a/.github/workflows/sync-files.yml
+++ b/.github/workflows/sync-files.yml
@@ -12,7 +12,7 @@ jobs:
       - name: 🚚 Checkout
         uses: actions/checkout@v3
       - name: 📁 Synchronization
-        uses: BetaHuhn/repo-file-sync-action@v1
+        uses: BetaHuhn/repo-file-sync-action@v1.17.22 # https://github.com/BetaHuhn/repo-file-sync-action/issues/276
         with:
           GH_PAT: ${{ secrets.GH_FULL_PAT }}
           COMMIT_PREFIX: "chore:"
