ci(sync): use orignal message

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           GH_PAT: ${{ secrets.GH_FULL_PAT }}
           COMMIT_PREFIX: "chore:"
+          ORIGINAL_MESSAGE: true
           SKIP_PR: true
           GIT_USERNAME: github-actions[bot]
           GIT_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
