ci(sync): add httpclient

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -24,6 +24,7 @@ group:
       prom-client-net/prom-client
       prom-client-net/prom-client-dependencyinjection
       prom-client-net/prom-client-healthchecks
+      prom-client-net/prom-client-httpclient
       prom-client-net/prom-client-httprequestdurations
       prom-client-net/prom-client-aspnetcore
       prom-client-net/prom-client-metricserver
