ci: remove icons

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: 📁 Sync Files
+name: Sync Files
 
 on:
   push:
@@ -7,12 +7,12 @@ on:
 
 jobs:
   sync-files:
-    name: 🔄 Sync Files
+    name: Sync Files
     runs-on: ubuntu-22.04
     steps:
-      - name: 🚚 Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      - name: 📁 Synchronization
+      - name: Synchronization
         uses: BetaHuhn/repo-file-sync-action@v1.21.0
         with:
           GH_PAT: ${{ secrets.GH_FULL_PAT }}
