--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -20,6 +20,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run command
-        run: gh pr merge -r --auto ${{ github.event.pull_request.number }}
+        run: gh pr merge -s --auto ${{ github.event.pull_request.number }}
         env:
           GH_TOKEN: ${{ secrets.GH_FULL_PAT }}
