--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -21,4 +21,13 @@ group:
       - source: .ruleset
         dest: .ruleset
     repos: |
+      prom-client-net/prom-client
+      prom-client-net/prom-client-dependencyinjection
+      prom-client-net/prom-client-healthchecks
+      prom-client-net/prom-client-httpclient
+      prom-client-net/prom-client-httprequestdurations
+      prom-client-net/prom-client-aspnetcore
+      prom-client-net/prom-client-metricserver
+      prom-client-net/prom-client-metricpusher
       prom-client-net/prom-client-metricpusher-hostedservice
+      prom-client-net/prom-client-owin
