--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -30,4 +30,23 @@ group:
       prom-client-net/prom-client-metricserver
       prom-client-net/prom-client-metricpusher
       prom-client-net/prom-client-metricpusher-hostedservice
+
+  - files:
+      - source: workflows/automerge.yml
+        dest:  workflows/automerge.yml
+      - source: stylecop.json
+        dest: stylecop.json
+      - source: .editorconfig
+        dest: .editorconfig
+      - source: .gitattributes
+        dest: .gitattributes
+      - source: .gitignore
+        dest: .gitignore
+      - source: Directory.Build.props
+        dest: Directory.Build.props
+      - source: icon.png
+        dest: icon.png
+      - source: .ruleset
+        dest: .ruleset
+    repos: |
       prom-client-net/prom-client-owin
