--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -35,8 +35,8 @@ group:
       - source: .github/
         dest: .github/
         exclude: |
-          ci.yml
           sync.yml
+          workflows/ci.yml
           workflows/sync.yml
       - source: stylecop.json
         dest: stylecop.json
