--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -36,6 +36,7 @@ group:
         dest: .github/
         exclude: |
           sync.yml
+          settings.yml
           workflows/ci.yml
           workflows/sync.yml
       - source: stylecop.json
