--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -17,6 +17,7 @@ jobs:
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
           GH_PAT: ${{ secrets.GH_FULL_PAT }}
+          CONFIG_PATH: .github/sync-config.yml
           COMMIT_PREFIX: "sync:"
           ORIGINAL_MESSAGE: true
           COMMIT_EACH_FILE: false
