--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -18,10 +18,10 @@ jobs:
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
           GH_PAT: ${{ secrets.GH_FULL_PAT }}
-          CONFIG_PATH: .github/sync-config.yml
-          COMMIT_PREFIX: "sync:"
+          ASSIGNEES: phnx47
+          COMMIT_PREFIX: "chore:"
           BRANCH_PREFIX: "sync/SOURCE_REPO_NAME"
+          CONFIG_PATH: .github/sync-config.yml
           ORIGINAL_MESSAGE: true
-          COMMIT_EACH_FILE: false
           GIT_USERNAME: phnx47[bot]
           GIT_EMAIL: 78849906+phnx47-bot@users.noreply.github.com
