--- a/renovate.json
+++ b/renovate.json
@@ -1,15 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    ":dependencyDashboard",
-    ":semanticPrefixFixDepsChoreOthers",
-    "group:monorepos",
-    "workarounds:all"
-  ],
-  "labels": [
-    "dependencies"
-  ],
-  "assignees": [
-    "@phnx47"
-  ]
+  "extends": [":dependencyDashboard", ":semanticPrefixFixDepsChoreOthers", "group:monorepos", "workarounds:all"],
+  "labels": ["dependencies"],
+  "assignees": ["phnx47"]
 }
