--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [":dependencyDashboard", ":semanticPrefixFixDepsChoreOthers", "group:monorepos", "workarounds:all"],
+  "extends": [":dependencyDashboard", "group:monorepos"],
   "labels": ["dependencies"],
-  "assignees": ["phnx47"]
+  "assignees": ["phnx47"],
+  "semanticCommits": "disabled",
+  "commitMessageAction": "Bump",
+  "commitMessageTopic": "{{depName}}"
 }
